Fri Aug 24 11:50:03 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/blk.c src/dblib/bcp.c src/tds/login.c:
	* src/tds/query.c src/tds/token.c:
	- small changes for TDS 9.0

Mon Aug 16 10:09:42 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/Makefile.am src/dblib/unittests/Makefile.am:
	* src/odbc/unittests/Makefile.am src/tds/net.c:
	* src/tds/unittests/Makefile.am:
	- remove other warnings

Mon Aug 16 08:29:38 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/unittests/convert.c win32/initnet.c:	
	- remove some warnings compiling with MingW

Sat Aug 11 08:51:45 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c vms/config_h.vms vms/descrip_mms.template:
	- applied Craig A. Berry patch #1772080 for VMS systems

Fri Aug 10 11:17:32 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* NEWS: updated

Fri Aug 10 11:14:19 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* win32/dev-cpp/Makefile.win: add missing file

Thu Aug 09 14:52:45 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/net.c: small fixes

Thu Aug 09 10:26:51 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/userguide.sgml: document port override syntax

Thu Aug 09 09:49:34 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* doc/htdoc/basic_jdbc_question.html doc/htdoc/contrib.html:
	* doc/htdoc/docs.html doc/htdoc/index.html doc/htdoc/news.html:
	* doc/htdoc/software.html doc/htdoc/support.html:
	* doc/htdoc/vague_jdbc_question.html doc/htdoc/which_api.html:
	- make xhtml compatible

Wed Aug 08 15:24:16 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/odbc/Makefile.am win32/version.rc.in:
	- fix odbc cross compile using MingW

Wed Aug 08 11:34:40 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/freetds_autobuild:
	- improved adding test for server:port and server\instance case
